--- a/css/all.css
+++ b/css/all.css
@@ -6371,6 +6371,10 @@ ol.fancy-list {
 .bg-white {
   background-color: white; }
 
+.bg-info {
+  background-color: #D5C197;
+  color: white; }
+
 .bg-half-n-half {
   background: linear-gradient(to bottom, #f8f8f8 0%, #f8f8f8 50%, white 50%, white 100%); }
 
@@ -7174,28 +7178,28 @@ ol.fancy-list {
   margin-right: 0; }
 
 .puller-xs-left-xs {
-  margin-bottom: -4px; }
+  margin-left: -4px; }
 
 .puller-xs-left-sm {
-  margin-bottom: -8px; }
+  margin-left: -8px; }
 
 .puller-xs-left-md {
-  margin-bottom: -16px; }
+  margin-left: -16px; }
 
 .puller-xs-left-lg {
-  margin-bottom: -32px; }
+  margin-left: -32px; }
 
 .puller-xs-left-xl {
-  margin-bottom: -64px; }
+  margin-left: -64px; }
 
 .puller-xs-left-xxl {
-  margin-bottom: -128px; }
+  margin-left: -128px; }
 
 .puller-xs-left-clear {
-  margin-bottom: 0; }
+  margin-left: 0; }
 
 .copy.puller-xs-left-clear {
-  margin-bottom: 0; }
+  margin-left: 0; }
 
 @media (min-width: 768px) {
   .puller-sm-xs {
@@ -7263,21 +7267,21 @@ ol.fancy-list {
   .copy.puller-sm-right-clear {
     margin-right: 0; }
   .puller-sm-left-xs {
-    margin-bottom: -4px; }
+    margin-left: -4px; }
   .puller-sm-left-sm {
-    margin-bottom: -8px; }
+    margin-left: -8px; }
   .puller-sm-left-md {
-    margin-bottom: -16px; }
+    margin-left: -16px; }
   .puller-sm-left-lg {
-    margin-bottom: -32px; }
+    margin-left: -32px; }
   .puller-sm-left-xl {
-    margin-bottom: -64px; }
+    margin-left: -64px; }
   .puller-sm-left-xxl {
-    margin-bottom: -128px; }
+    margin-left: -128px; }
   .puller-sm-left-clear {
-    margin-bottom: 0; }
+    margin-left: 0; }
   .copy.puller-sm-left-clear {
-    margin-bottom: 0; } }
+    margin-left: 0; } }
 
 @media (min-width: 992px) {
   .puller-md-xs {
@@ -7345,21 +7349,21 @@ ol.fancy-list {
   .copy.puller-md-right-clear {
     margin-right: 0; }
   .puller-md-left-xs {
-    margin-bottom: -4px; }
+    margin-left: -4px; }
   .puller-md-left-sm {
-    margin-bottom: -8px; }
+    margin-left: -8px; }
   .puller-md-left-md {
-    margin-bottom: -16px; }
+    margin-left: -16px; }
   .puller-md-left-lg {
-    margin-bottom: -32px; }
+    margin-left: -32px; }
   .puller-md-left-xl {
-    margin-bottom: -64px; }
+    margin-left: -64px; }
   .puller-md-left-xxl {
-    margin-bottom: -128px; }
+    margin-left: -128px; }
   .puller-md-left-clear {
-    margin-bottom: 0; }
+    margin-left: 0; }
   .copy.puller-md-left-clear {
-    margin-bottom: 0; } }
+    margin-left: 0; } }
 
 @media (min-width: 1264px) {
   .puller-lg-xs {
@@ -7427,21 +7431,21 @@ ol.fancy-list {
   .copy.puller-lg-right-clear {
     margin-right: 0; }
   .puller-lg-left-xs {
-    margin-bottom: -4px; }
+    margin-left: -4px; }
   .puller-lg-left-sm {
-    margin-bottom: -8px; }
+    margin-left: -8px; }
   .puller-lg-left-md {
-    margin-bottom: -16px; }
+    margin-left: -16px; }
   .puller-lg-left-lg {
-    margin-bottom: -32px; }
+    margin-left: -32px; }
   .puller-lg-left-xl {
-    margin-bottom: -64px; }
+    margin-left: -64px; }
   .puller-lg-left-xxl {
-    margin-bottom: -128px; }
+    margin-left: -128px; }
   .puller-lg-left-clear {
-    margin-bottom: 0; }
+    margin-left: 0; }
   .copy.puller-lg-left-clear {
-    margin-bottom: 0; } }
+    margin-left: 0; } }
 
 .buffer-xs-xs {
   padding: 4px; }
